force-app/main/default/objects/Unit_Payment__c/Unit_Payment__c.object-meta.xml
<CustomObject>
    <label>Unit Payment</label>
    <nameField>
        <displayFormat>Unit-Payment-{0000}</displayFormat>
        <label>Unit Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unit Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>