force-app/main/default/objects/Unit_Payment__c/fields/AdditionalEmail__c.field-meta.xml
<CustomField>
    <fullName>AdditionalEmail__c</fullName>
    <label>Additional Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>