force-app/main/default/objects/Unit_Payment__c/fields/Authorization_Code__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Code__c</fullName>
    <label>Authorization Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>