force-app/main/default/objects/Unit_Payment__c/fields/BankReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>BankReferenceNumber__c</fullName>
    <label>Bank Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>