force-app/main/default/objects/Unit_Payment__c/fields/BranchName__c.field-meta.xml
<CustomField>
    <fullName>BranchName__c</fullName>
    <label>Branch Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Emirates</fullName>
            </value>
            <value>
                <fullName>NBD</fullName>
            </value>
            <value>
                <fullName>ADCB</fullName>
            </value>
            <value>
                <fullName>FAB</fullName>
            </value>
            <value>
                <fullName>DIB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>