force-app/main/default/objects/Unit_Payment__c/fields/CardExpiryMonthYear__c.field-meta.xml
<CustomField>
    <fullName>CardExpiryMonthYear__c</fullName>
    <label>Card Expiry Month/Year</label>
    <length>5</length>
    <type>Text</type>
</CustomField>