force-app/main/default/objects/Unit_Payment__c/fields/CardIssuingBank__c.field-meta.xml
<CustomField>
    <fullName>CardIssuingBank__c</fullName>
    <label>Card Issuing Bank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>