force-app/main/default/objects/Unit_Payment__c/fields/CardLast4Digits__c.field-meta.xml
<CustomField>
    <fullName>CardLast4Digits__c</fullName>
    <label>Card Last 4 Digits</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>