force-app/main/default/objects/Unit_Payment__c/fields/ChequeClearanceDate__c.field-meta.xml
<CustomField>
    <fullName>ChequeClearanceDate__c</fullName>
    <label>Cheque Clearance Date</label>
    <type>Date</type>
</CustomField>