force-app/main/default/objects/Unit_Payment__c/fields/ChequeDate__c.field-meta.xml
<CustomField>
    <fullName>ChequeDate__c</fullName>
    <label>Cheque Date</label>
    <type>Date</type>
</CustomField>