force-app/main/default/objects/Unit_Payment__c/fields/ChequeNumber__c.field-meta.xml
<CustomField>
    <fullName>ChequeNumber__c</fullName>
    <label>Cheque Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>