force-app/main/default/objects/Unit_Payment__c/fields/LinkExpiry__c.field-meta.xml
<CustomField>
    <fullName>LinkExpiry__c</fullName>
    <label>Link Expiry</label>
    <type>DateTime</type>
</CustomField>