force-app/main/default/objects/Unit_Payment__c/fields/NameOnCard__c.field-meta.xml
<CustomField>
    <fullName>NameOnCard__c</fullName>
    <label>Name on Card</label>
    <length>255</length>
    <type>Text</type>
</CustomField>