force-app/main/default/objects/Unit_Payment__c/fields/OnlinePaymentRefNumber__c.field-meta.xml
<CustomField>
    <fullName>OnlinePaymentRefNumber__c</fullName>
    <label>Online Payment Ref Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>