force-app/main/default/objects/Unit_Payment__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Unit Payments</relationshipLabel>
    <relationshipName>Unit_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>