force-app/main/default/objects/Unit_Payment__c/fields/PaymentURL__c.field-meta.xml
<CustomField>
    <fullName>PaymentURL__c</fullName>
    <label>Payment URL</label>
    <type>Url</type>
</CustomField>