force-app/main/default/objects/Unit_Payment__c/fields/PayModeGateWay__c.field-meta.xml
<CustomField>
    <fullName>PayModeGateWay__c</fullName>
    <label>PayModeGateWay</label>
    <length>255</length>
    <type>Text</type>
</CustomField>