force-app/main/default/objects/Unit_Payment__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Unit Payments</relationshipLabel>
    <relationshipName>Unit_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>