force-app/main/default/objects/Unit_Payment__c/fields/ReceiptSent__c.field-meta.xml
<CustomField>
    <fullName>ReceiptSent__c</fullName>
    <label>Receipt Sent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>