force-app/main/default/objects/Unit_Payment__c/fields/SenderAccountName__c.field-meta.xml
<CustomField>
    <fullName>SenderAccountName__c</fullName>
    <label>Sender Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>