force-app/main/default/objects/Unit_Payment__c/fields/SwiftCodeIBAN__c.field-meta.xml
<CustomField>
    <fullName>SwiftCodeIBAN__c</fullName>
    <label>Swift Code / IBAN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>