force-app/main/default/objects/Unit_Payment__c/fields/SyncWithYardi__c.field-meta.xml
<CustomField>
    <fullName>SyncWithYardi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync with Yardi</label>
    <type>Checkbox</type>
</CustomField>