force-app/main/default/objects/Unit_Payment__c/fields/TransferDate__c.field-meta.xml
<CustomField>
    <fullName>TransferDate__c</fullName>
    <label>Transfer Date</label>
    <type>Date</type>
</CustomField>