force-app/main/default/objects/Unit_Payment__c/fields/TransferReferenceUTR__c.field-meta.xml
<CustomField>
    <fullName>TransferReferenceUTR__c</fullName>
    <label>Transfer Reference / UTR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>